change position lang

--- a/0HTML/index.html
+++ b/0HTML/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
   <head>
+		<meta charset="UTF-8">
     <title>쉬운 것도 다시 보자 :: 실습</title>
-		<meta lang="ko">
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		
 		<link href="../assets/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css"/>
-		<link href="../assets/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>		
+		<link href="../assets/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 		<!-- Custom CSS -->
 		<link href="../assets/css/common.css" rel="stylesheet" type="text/css"/>
   </head>
